Fix: text align

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ h2 {
 
 footer h2 {
   max-width: 95%;
+  text-align: center;
 }
 
 .projects {
